--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -1,3 +1,126 @@
+/* Allgemein */
+
+* {
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+:root {
+    --dark: #0c0c19;
+    --light: #fff8f2;
+    --accent: #02fec6;
+}
+
 body {
-    background-color: aliceblue;
+    background-color: var(--light);
+    overflow-x: hidden;
+    margin: 0;
+}
+
+.hidden {
+    display: none;
+}
+
+.shown {
+    display: initial;
+}
+
+.disable-scroll {
+    overflow: hidden;
+}
+
+div, ul, li, a, header, nav {
+    border: 1px solid rd;
+}
+
+/* Allgemein ende */
+
+/* Navbar */
+
+header {
+    position: sticky;
+    top: 0;
+    background-color: var(--dark);
+    min-height: 8vh;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100dvw;
+}
+
+.nav-logo-container {
+    margin: 10px;
+}
+
+.nav-logo {
+    max-width: 65px;
+}
+
+.nav-list {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-list-item {
+    margin: 0 1rem;
+}
+
+.nav-list-link {
+    color: var(--light);
+    padding: 6px 18px;
+    border: 3px solid var(--light);
+    border-radius: 15px;
+    font-weight: bold;
+    transition-duration: .2s;
+}
+
+.nav-list-link:hover {
+    background-color: var(--light);
+    color: var(--dark);
+}
+
+.nav-dropdown-btn {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    margin: .5rem;
+}
+
+.nav-dropdown-btn span {
+    height: 6px;
+    width: 40px;
+    background-color: var(--light);
+    border-radius: 3px;
+    margin-top: 3px;
+}
+
+.nav-button-rect1, .nav-button-rect3 {
+    transform-origin: 7.5px;
+}
+
+.nav-dropdown-menu {
+    position: absolute;
+    height: 92vh;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #02fec6;
+}
+
+/* Navbar ende */
+
+.content {
+    height: 92vh;
 }
